# tikzplotlib

./: .bandit  .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  ChangeLog  LICENSE  Makefile  README  README.md  codecov.yml  createBarPlots.py  justfile  matplotlib2tikz.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  test.yml
doc/: Makefile  conf.py  index.rst  requirements.txt
helpers/: matplotlib2tikz_helpers.py
matplotlib2tikz/: __about__.py  __init__.py  axes.py  color.py  files.py  image.py  legend.py  line2d.py  patch.py  path.py  quadmesh.py  save.py  text.py  util.py
src/: matplotlib2tikz.py  setup.py
src/tikzplotlib/: _axes.py  _cleanfigure.py  _color.py  _container.py  _files.py  _hatches.py  _image.py  _legend.py  _line2d.py  _patch.py  _path.py  _quadmesh.py  _save.py  _text.py  _util.py
test/: .gitignore  acidtest  acidtest.py  create_tex  helpers.py  pcolormesh_example.py  phash  phash.py  refresh_reference_files.py  rotated_labels.py  show  test.py  test_annotate.py  test_annotate_reference.tex  test_arrows.py  test_arrows_reference.tex  test_axvline.py  test_axvline_reference.tex  test_barchart.py  test_barchart_errorbars.py  test_barchart_errorbars_reference.tex  test_barchart_legend.py  test_barchart_legend_reference.tex  test_barchart_reference.tex  test_basic_sin.py  test_basic_sin_reference.tex  test_boxplot.py  test_boxplot_reference.tex  test_cleanfigure.py  test_colorbars.py  test_colorbars_reference.tex  test_context.py  test_context_reference.tex  test_contourf.py  test_contourf_reference.tex  test_custom_collection.py  test_custom_collection_reference.tex  test_datetime.py  test_datetime_paths.py  test_datetime_paths_reference.tex  (+115 more)
test/test_annotate/: reference.tex  test_annotate.py
test/test_barchart/: reference.tex  test_barchart.py
test/test_barchart_errorbars/: reference.tex  test_barchart_errorbars.py
test/test_barchart_legend/: reference.tex  test_barchart_legend.py
test/test_basic_sin/: reference.tex  test_basic_sin.py
test/test_boxplot/: reference.tex  test_boxplot.py
test/test_colorbars/: test_colorbars.py
test/test_contourf/: test_contourf.py
test/test_dual_axis/: reference.tex  test_dual_axis.py
test/test_errorband/: reference.tex  test_errorband.py
test/test_errorbar/: reference.tex  test_errorbar.py
test/test_externalize_tables/: test_externalize_tables.py
test/test_fancy_colorbar/: test_fancy_colorbar.py
test/test_fancybox/: reference.tex  test_fancybox.py
test/test_fillstyle/: reference.tex  test_fillstyle.py
test/test_heat/: test_heat.py
test/test_histogram/: reference.tex  test_histogram.py
test/test_legend_best_location/: reference.tex  test_legend_best_location.py
test/test_loglogplot/: reference.tex  test_loglogplot.py
test/test_logplot/: reference.tex  test_logplot.py
test/test_noise/: test_noise.py
test/test_scatter/: test_scatter.py
test/test_scatter_colormap/: test_scatter_colormap.py
test/test_sharex_and_y/: test_sharex_and_y.py
test/test_subplots/: test_subplots.py
test/test_text_overlay/: test_text_overlay.py
test/testfunctions/: __init__.py  annotate.py  barchart.py  barchart_errorbars.py  barchart_legend.py  basic_sin.py  boxplot.py  circle_patch.py  colorbars.py  dual_axis.py  errorband.py  errorbar.py  fancy_colorbar.py  fancybox.py  fillstyle.py  heat.py  histogram.py  image_plot.py  image_plot2.py  legend_best_location.py  legends.py  legends2.py  line_collection.py  loglogplot.py  logplot.py  marker.py  noise.py  (+13 more)
tests/: .gitignore  helpers.py  refresh_reference_files.py  test_annotate.py  test_annotate_reference.tex  test_arrows.py  test_arrows_reference.tex  test_axvline.py  test_axvline_reference.tex  test_barchart.py  test_barchart_errorbars.py  test_barchart_errorbars_reference.tex  test_barchart_legend.py  test_barchart_legend_reference.tex  test_barchart_reference.tex  test_basic_sin.py  test_basic_sin_reference.tex  test_boxplot.py  test_boxplot_reference.tex  test_cleanfigure.py  test_colorbars.py  test_colorbars_reference.tex  test_context.py  test_context_reference.tex  test_contourf.py  test_contourf_reference.tex  test_coordinates.py  test_coordinates_reference.tex  test_custom_collection.py  test_custom_collection_reference.tex  test_datetime.py  test_datetime_paths.py  test_datetime_paths_reference.tex  test_datetime_reference.tex  test_deterministic_output.py  test_dual_axis.py  test_dual_axis_reference.tex  test_errorband.py  test_errorband_reference.tex  test_errorbar.py  (+92 more)
tikzplotlib/: __about__.py  __init__.py  _axes.py  _cleanfigure.py  _color.py  _files.py  _hatches.py  _image.py  _legend.py  _line2d.py  _markers.py  _patch.py  _path.py  _quadmesh.py  _save.py  _text.py  _util.py  axes.py  cleanfigure.py  color.py  files.py  image.py  legend.py  line2d.py  patch.py  path.py  quadmesh.py  save.py  text.py  util.py
trunk/: matplotlib2tikz.py
(+2 files in other folders)
