[metadata]
name = tikzplotlib
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Convert matplotlib figures into TikZ/PGFPlots
url = https://github.com/nschloe/tikzplotlib
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: Visualization


[options]
packages = find:
install_requires = matplotlib >= 1.4.0; numpy; Pillow
python_requires = >=3.6
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4
