[metadata]
name = tikzplotlib
version = 0.9.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Convert matplotlib figures into TikZ/PGFPlots
url = https://github.com/nschloe/tikzplotlib
project_urls =
    Code=https://github.com/nschloe/tikzplotlib
    Issues=https://github.com/nschloe/tikzplotlib/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    matplotlib >= 1.4.0
    numpy
    Pillow
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
