[metadata]
name = tikzplotlib
version = 0.9.16
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Convert matplotlib figures into TikZ/PGFPlots
url = https://github.com/nschloe/tikzplotlib
project_urls =
    Code=https://github.com/nschloe/tikzplotlib
    Issues=https://github.com/nschloe/tikzplotlib/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Matplotlib
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: Visualization
keywords =
    latex
    tikz
    matplotlib
    graphics

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    matplotlib >= 1.4.0
    numpy
    Pillow
python_requires = >=3.7

[options.packages.find]
where=src
